# Dataset-Curation-Tool

./: .gitignore  CONTRIBUTING.md  README.md  advanced_settings_tab.py  autotag.py  batch_downloader.py  css_constants.py  custom_dataset_tab.py  download_tab.py  environment.yml  extras_tab.py  gallery_tab.py  helper_functions.py  image_data_loader.py  image_editor_tab.py  install.bat  install.sh  install_annotation_models.bat  install_annotation_models.sh  install_flexavatar.bat  install_flexavatar.sh  install_geckodriver.bat  install_geckodriver.sh  install_hydra_runtime_deps.bat  install_hydra_runtime_deps.sh  install_image_tools.bat  install_image_tools.sh  install_jtp3_runtime.bat  install_jtp3_runtime.sh  install_mcp_tools.bat  install_mcp_tools.sh  install_pose_models.bat  install_pose_models.sh  install_sam_runtime.bat  install_sam_runtime.sh  install_torch_cpu.bat  install_torch_cpu.sh  install_torch_cuda128.bat  install_torch_cuda128.sh  install_voice_runtime.bat  (+37 more)
docs/: API.md  (+151 more)
integrations/flexavatar/source/: .gitignore  README.md  environment.yml  pyproject.toml
integrations/flexavatar/source/data/pixel3dmm_processing/processing/itw/asian_watercolor_girl/tracking/: crop_ymin_ymax_xmin_xmax.npy
integrations/flexavatar/source/data/pixel3dmm_processing/processing/itw/einstein/tracking/: crop_ymin_ymax_xmin_xmax.npy
integrations/flexavatar/source/data/pixel3dmm_processing/processing/itw/marble_sculpture/tracking/: crop_ymin_ymax_xmin_xmax.npy
integrations/flexavatar/source/models/FLEX-1/: dataset_config.json  model_config.json
integrations/flexavatar/source/scripts/: render_example.py  run_gui.py  track_pixel3dmm_itw.py
integrations/flexavatar/source/src/flexavatar/: env.py
integrations/flexavatar/source/src/flexavatar/config/: dataset_config.py  expression_config.py  flexavatar_config.py
integrations/flexavatar/source/src/flexavatar/data_adapter/: base_data_adapter.py  example_data.py  in_the_wild_data_adapter.py  nersemble_data_adapter.py  pixel3dmm_data_adapter.py
integrations/flexavatar/source/src/flexavatar/model/: dinov2.py  flexavatar_model.py  flexavatar_preprocessor.py  inversion.py  lam_gs_layer.py  lam_point_embedder.py  lam_transformer.py  lam_transformer_dit.py  nanogpt.py  sheap.py  stylegan_pixelshuffle.py  stylegan_upsampler.py
integrations/flexavatar/source/src/flexavatar/model_manager/: avatar_code_manager.py  flexavatar_model_manager.py
integrations/flexavatar/source/src/flexavatar/util/: codes.py  lru_cache.py  plucker.py  rotation.py  video.py
integrations/flexavatar/source/src/flexavatar/viewer/: viewer_utils.py
(+447 files in other folders)
