[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-curation-tool-modern"
version = "5.78.9"
description = "Modern local-first dataset curation, tagging, captioning, gallery, and model orchestration tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = []
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pillow>=10.0",
  "numpy>=1.26",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "requests>=2.31",
    "selenium>=4.20",
  "tqdm>=4.66",
  "pyarrow>=16",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
models = [
  "transformers>=4.57",
  "huggingface_hub>=0.23",
  "accelerate>=0.30",
  "timm>=1.0",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "einops>=0.7",
]
video = [
  # OpenCV/cv2 is provided by Conda environment.yml (`opencv`) for installer builds.
  # Keeping opencv-python out of pip extras avoids Windows uninstall-no-record-file failures.
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[project.scripts]
data-curation-tool = "data_curation_tool.__main__:main"

[tool.setuptools.packages.find]
include = ["data_curation_tool*"]

[tool.setuptools.package-data]
data_curation_tool = ["static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
